# pixelos-agricol

./: .gitignore  Makefile
hardware/firmware/beacon/: pixelos_beacon.ino
hardware/openbsd/: robot_pf.conf
installer/: bootloader.py
pixelnode/: BUILD.md  settings.gradle.kts
pixelnode/app/: build.gradle.kts
pixelnode/app/src/main/: AndroidManifest.xml
pixelos/src/agent/: agent.py
pixelos/src/cli/: main.py
pixelos/src/core/: discovery.py  ipc.py  orchestrator.py  orchestrator_class.py  orchestrator_routes.py  pixdht.py  pixipc.py  predictor.py  provisioning.py  services.py  tasks_routes.py  traffic.py  traffic_controller.py  traffic_manager.py
pixelos/src/core/pixblackbox/: __init__.py  routes.py
pixelos/src/core/pixdds/: __init__.py  discovery.py  domain.py  qos.py  reader.py  routes.py  topic.py  transport.py  (+1 more)
pixelos/src/core/pixhal/vulkan/: CMakeLists.txt  __init__.py  py_fallback.py
pixelos/src/core/pixhal/vulkan/include/pixhal/vk/: instance.h  pipeline.h  renderer.h  shader.h  swapchain.h  types.h
pixelos/src/core/pixhal/vulkan/python/: bindings.cpp
pixelos/src/core/pixhal/vulkan/shaders/: alpha_blend.frag  balloon.frag  base.vert  triangle.frag
pixelos/src/core/pixhal/vulkan/src/: renderer.cpp
pixelos/src/core/pixhal/vulkan/test/: test_renderer.cpp
pixelos/src/web/: app.py
pixelos/tests/: test_pixblackbox.py  test_pixdds.py  test_pixengineer.py  test_pixhardwaremap.py  test_pixmode.py  test_pixpowermanager.py  test_pixswarm.py
robots/: __init__.py  base.py  drone.py  inspecteur.py  recolteur.py  transporteur.py
web/: app.py
(+45 files in other folders)
